# psi-spell-encode-wasm

./: Cargo.toml
lib/: Cargo.toml  build.sh
lib/src/: lib.rs  zstd_dict
psip/: Cargo.toml
psip/src/: imgur.rs  main.rs
src/: lib.rs  zstd_dict
