[package]
name = "psi-spell-encode-wasm"
version = "1.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-simd = "0.8.0"
flate2 = "1.0.25"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.62", features = ["console"] }
wee_alloc = "0.4.5"

[dependencies.serde]
version = "1.0.160"
features = ["derive"]

[dependencies.quartz_nbt]
git = "https://github.com/Rusty-Quartz/quartz_nbt"
rev = "38b96935317865bec5a8b82052f4e7604d945bea"
features = ["serde"]

[profile.release]
lto = true
