[package]
name = "psi-spell-encode-wasm"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-simd = "0.8.0"
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.85"

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.quartz_nbt]
version = "0.2.7"
features = ["serde"]

[dependencies.zstd]
version = "0.12.3"
features = ["wasm", "fat-lto"]
default-features = false

[profile.release]
lto = true
